lab1/myfirst.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "vault"
  namespace: default
  labels:
    app: "vault"
spec:
  containers:
    - name: vault
      image: "vault:1.13.3"
      ports:
        - containerPort: 8200
          name: http
